# beam

./: .gitignore
sdks/: BUILD.bazel  WORKSPACE  go.mod  go.sum  workspace_go_repositories.bzl
sdks/go/cmd/beamctl/: BUILD.bazel
sdks/go/cmd/beamctl/cmd/: BUILD.bazel
sdks/go/cmd/beamvet/: BUILD.bazel  main.go
sdks/go/cmd/specialize/: BUILD.bazel
sdks/go/cmd/starcgen/: BUILD.bazel
sdks/go/cmd/symtab/: BUILD.bazel
sdks/go/container/: BUILD.bazel
sdks/go/examples/complete/autocomplete/: BUILD.bazel
sdks/go/examples/contains/: BUILD.bazel
sdks/go/examples/cookbook/combine/: BUILD.bazel
sdks/go/examples/cookbook/filter/: BUILD.bazel
sdks/go/examples/cookbook/join/: BUILD.bazel
sdks/go/examples/cookbook/max/: BUILD.bazel
sdks/go/examples/cookbook/tornadoes/: BUILD.bazel
sdks/go/examples/debugging_wordcount/: BUILD.bazel
sdks/go/examples/forest/: BUILD.bazel
sdks/go/examples/grades/: BUILD.bazel
sdks/go/examples/kafka/: BUILD.bazel
sdks/go/examples/large_wordcount/: BUILD.bazel
sdks/go/examples/minimal_wordcount/: BUILD.bazel
sdks/go/examples/multiout/: BUILD.bazel
sdks/go/examples/pingpong/: BUILD.bazel
sdks/go/examples/readavro/: BUILD.bazel
sdks/go/examples/snippets/: BUILD.bazel
sdks/go/examples/streaming_wordcap/: BUILD.bazel
sdks/go/examples/stringsplit/: BUILD.bazel
sdks/go/examples/windowed_wordcount/: BUILD.bazel
sdks/go/examples/wordcount/: BUILD.bazel
sdks/go/examples/xlang/: BUILD.bazel
sdks/go/examples/xlang/bigquery/: BUILD.bazel
sdks/go/examples/xlang/cogroup_by/: BUILD.bazel
sdks/go/examples/xlang/combine/: BUILD.bazel
sdks/go/examples/xlang/combine_globally/: BUILD.bazel
sdks/go/examples/xlang/flatten/: BUILD.bazel
sdks/go/examples/xlang/group_by/: BUILD.bazel
sdks/go/examples/xlang/multi_input_output/: BUILD.bazel
sdks/go/examples/xlang/partition/: BUILD.bazel
sdks/go/examples/xlang/sql/: BUILD.bazel
sdks/go/examples/xlang/wordcount/: BUILD.bazel
sdks/go/examples/yatzy/: BUILD.bazel
sdks/go/pkg/beam/: BUILD.bazel
sdks/go/pkg/beam/artifact/: BUILD.bazel
sdks/go/pkg/beam/artifact/gcsproxy/: BUILD.bazel
sdks/go/pkg/beam/core/: BUILD.bazel
sdks/go/pkg/beam/core/funcx/: BUILD.bazel
sdks/go/pkg/beam/core/graph/: BUILD.bazel
sdks/go/pkg/beam/core/graph/coder/: BUILD.bazel
sdks/go/pkg/beam/core/graph/mtime/: BUILD.bazel
sdks/go/pkg/beam/core/graph/window/: BUILD.bazel
sdks/go/pkg/beam/core/metrics/: BUILD.bazel
sdks/go/pkg/beam/core/runtime/: BUILD.bazel
sdks/go/pkg/beam/core/runtime/coderx/: BUILD.bazel
sdks/go/pkg/beam/core/runtime/exec/: BUILD.bazel
sdks/go/pkg/beam/core/runtime/genx/: BUILD.bazel
sdks/go/pkg/beam/core/runtime/graphx/: BUILD.bazel
sdks/go/pkg/beam/core/runtime/harness/: BUILD.bazel
sdks/go/pkg/beam/core/runtime/metricsx/: BUILD.bazel
sdks/go/pkg/beam/core/runtime/pipelinex/: BUILD.bazel
sdks/go/pkg/beam/core/runtime/xlangx/: BUILD.bazel
sdks/go/pkg/beam/core/sdf/: BUILD.bazel
sdks/go/pkg/beam/core/typex/: BUILD.bazel
sdks/go/pkg/beam/internal/errors/: BUILD.bazel
sdks/go/pkg/beam/io/avroio/: BUILD.bazel
sdks/go/pkg/beam/io/bigqueryio/: BUILD.bazel
sdks/go/pkg/beam/io/databaseio/: BUILD.bazel
sdks/go/pkg/beam/io/datastoreio/: BUILD.bazel
sdks/go/pkg/beam/io/fhirio/: BUILD.bazel
sdks/go/pkg/beam/io/filesystem/: BUILD.bazel
sdks/go/pkg/beam/io/parquetio/: BUILD.bazel
sdks/go/pkg/beam/io/pubsubio/: BUILD.bazel
sdks/go/pkg/beam/io/synthetic/: BUILD.bazel
sdks/go/pkg/beam/io/textio/: BUILD.bazel
sdks/go/pkg/beam/log/: BUILD.bazel
sdks/go/pkg/beam/model/: BUILD.bazel
sdks/go/pkg/beam/model/fnexecution_v1/: BUILD.bazel
sdks/go/pkg/beam/model/jobmanagement_v1/: BUILD.bazel
sdks/go/pkg/beam/model/pipeline_v1/: BUILD.bazel
sdks/go/pkg/beam/options/gcpopts/: BUILD.bazel
sdks/go/pkg/beam/options/jobopts/: BUILD.bazel
sdks/go/pkg/beam/provision/: BUILD.bazel
sdks/go/pkg/beam/register/: BUILD.bazel
sdks/go/pkg/beam/runners/: BUILD.bazel
sdks/go/pkg/beam/runners/dataflow/: BUILD.bazel
sdks/go/pkg/beam/runners/direct/: BUILD.bazel
sdks/go/pkg/beam/runners/dot/: BUILD.bazel
sdks/go/pkg/beam/runners/flink/: BUILD.bazel
sdks/go/pkg/beam/runners/samza/: BUILD.bazel
sdks/go/pkg/beam/runners/session/: BUILD.bazel
sdks/go/pkg/beam/runners/spark/: BUILD.bazel
sdks/go/pkg/beam/runners/universal/: BUILD.bazel
sdks/go/pkg/beam/runners/vet/: BUILD.bazel  vet.go  vet_test.go  vet_user_test.go
sdks/go/pkg/beam/testing/passert/: BUILD.bazel
sdks/go/pkg/beam/testing/ptest/: BUILD.bazel
sdks/go/pkg/beam/testing/teststream/: BUILD.bazel
sdks/go/pkg/beam/transforms/filter/: BUILD.bazel
sdks/go/pkg/beam/transforms/sql/: BUILD.bazel
sdks/go/pkg/beam/transforms/stats/: BUILD.bazel
sdks/go/pkg/beam/transforms/top/: BUILD.bazel
sdks/go/pkg/beam/util/errorx/: BUILD.bazel
sdks/go/pkg/beam/util/execx/: BUILD.bazel
sdks/go/pkg/beam/util/gcsx/: BUILD.bazel
sdks/go/pkg/beam/util/grpcx/: BUILD.bazel
sdks/go/pkg/beam/util/harnessopts/: BUILD.bazel
sdks/go/pkg/beam/util/pubsubx/: BUILD.bazel
sdks/go/pkg/beam/util/shimx/: BUILD.bazel  generate.go
sdks/go/pkg/beam/util/starcgenx/: BUILD.bazel  starcgenx_test.go
sdks/go/pkg/beam/util/syscallx/: BUILD.bazel
sdks/go/pkg/beam/x/beamx/: BUILD.bazel
sdks/go/pkg/beam/x/debug/: BUILD.bazel
sdks/go/test/integration/: BUILD.bazel
sdks/go/test/integration/driver/: BUILD.bazel
sdks/go/test/integration/internal/jars/: BUILD.bazel
sdks/go/test/integration/internal/ports/: BUILD.bazel
sdks/go/test/integration/primitives/: BUILD.bazel
sdks/go/test/integration/synthetic/: BUILD.bazel
sdks/go/test/integration/wordcount/: BUILD.bazel
sdks/go/test/integration/xlang/: BUILD.bazel
sdks/go/test/load/: BUILD.bazel
sdks/go/test/load/cogbk/: BUILD.bazel
sdks/go/test/load/combine/: BUILD.bazel
sdks/go/test/load/group_by_key/: BUILD.bazel
sdks/go/test/load/pardo/: BUILD.bazel
sdks/go/test/load/sideinput/: BUILD.bazel
sdks/go/test/regression/: BUILD.bazel
sdks/go/test/regression/coders/fromyaml/: BUILD.bazel
(+49 files in other folders)
