load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//:__subpackages__"])

# gazelle:prefix github.com/apache/beam/sdks
# gazelle:exclude bazel-sdks
# gazelle:exclude bazel-bin
# gazelle:exclude bazel-out
# gazelle:exclude bazel-testlogs
# gazelle:exclude go/container
# gazelle:exclude go/data
# gazelle:exclude go/examples
# gazelle:exclude go/pkg/beam/artifact
# gazelle:exclude go/pkg/beam/core
# gazelle:exclude go/pkg/beam/internal
# gazelle:exclude go/pkg/beam/log
# gazelle:exclude go/pkg/beam/model
# gazelle:exclude go/pkg/beam/options
# gazelle:exclude go/pkg/beam/provision
# gazelle:exclude go/pkg/beam/register
# gazelle:exclude go/pkg/beam/runners
# gazelle:exclude go/pkg/beam/testing
# gazelle:exclude go/pkg/beam/transforms
# gazelle:exclude go/pkg/beam/util
# gazelle:exclude go/pkg/beam/x
# gazelle:exclude go/scripts
# gazelle:exclude go/test
# gazelle:exclude java
# gazelle:exclude python
# gazelle:exclude typescript
# gazelle:proto disable
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=workspace_go_repositories.bzl%gazelle_managed_go_repositories",
        "-prune",
    ],
    command = "update-repos",
)
