load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "container_lib",
    srcs = ["boot.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/container",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/beam/artifact",
        "//go/pkg/beam/model/fnexecution_v1",
        "//go/pkg/beam/model/pipeline_v1",
        "//go/pkg/beam/provision",
        "//go/pkg/beam/util/execx",
        "//go/pkg/beam/util/grpcx",
    ],
)

go_binary(
    name = "container",
    embed = [":container_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "container_test",
    srcs = ["boot_test.go"],
    embed = [":container_lib"],
    deps = [
        "//go/pkg/beam/artifact",
        "//go/pkg/beam/model/fnexecution_v1",
        "//go/pkg/beam/model/pipeline_v1",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
