load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "beamctl_lib",
    srcs = ["main.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/cmd/beamctl",
    visibility = ["//visibility:private"],
    deps = ["//go/cmd/beamctl/cmd"],
)

go_binary(
    name = "beamctl",
    embed = [":beamctl_lib"],
    visibility = ["//visibility:public"],
)
