load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "specialize_lib",
    srcs = ["main.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/cmd/specialize",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "specialize",
    embed = [":specialize_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "specialize_test",
    srcs = ["main_test.go"],
    embed = [":specialize_lib"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
