load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "forest_lib",
    srcs = ["forest.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/examples/forest",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/beam",
        "//go/pkg/beam/log",
        "//go/pkg/beam/x/beamx",
        "//go/pkg/beam/x/debug",
    ],
)

go_binary(
    name = "forest",
    embed = [":forest_lib"],
    visibility = ["//visibility:public"],
)
