load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "minimal_wordcount_lib",
    srcs = ["minimal_wordcount.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/examples/minimal_wordcount",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/beam",
        "//go/pkg/beam/io/filesystem/gcs",
        "//go/pkg/beam/io/filesystem/local",
        "//go/pkg/beam/io/textio",
        "//go/pkg/beam/runners/direct",
        "//go/pkg/beam/transforms/stats",
    ],
)

go_binary(
    name = "minimal_wordcount",
    embed = [":minimal_wordcount_lib"],
    visibility = ["//visibility:public"],
)
