load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "multiout_lib",
    srcs = ["multiout.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/examples/multiout",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/beam",
        "//go/pkg/beam/io/textio",
        "//go/pkg/beam/transforms/stats",
        "//go/pkg/beam/x/beamx",
    ],
)

go_binary(
    name = "multiout",
    embed = [":multiout_lib"],
    visibility = ["//visibility:public"],
)
