load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pingpong_lib",
    srcs = ["pingpong.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/examples/pingpong",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/beam",
        "//go/pkg/beam/io/textio",
        "//go/pkg/beam/log",
        "//go/pkg/beam/x/beamx",
    ],
)

go_binary(
    name = "pingpong",
    embed = [":pingpong_lib"],
    visibility = ["//visibility:public"],
)
