load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "readavro_lib",
    srcs = ["readavro.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/examples/readavro",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/beam",
        "//go/pkg/beam/io/avroio",
        "//go/pkg/beam/x/beamx",
        "//go/pkg/beam/x/debug",
    ],
)

go_binary(
    name = "readavro",
    embed = [":readavro_lib"],
    visibility = ["//visibility:public"],
)
