load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "beam",
    srcs = [
        "beam.shims.go",
        "coder.go",
        "combine.go",
        "create.go",
        "doc.go",
        "encoding.go",
        "external.go",
        "flatten.go",
        "forward.go",
        "gbk.go",
        "impulse.go",
        "metrics.go",
        "option.go",
        "pardo.go",
        "partition.go",
        "pcollection.go",
        "pipeline.go",
        "runner.go",
        "schema.go",
        "util.go",
        "validate.go",
        "windowing.go",
        "xlang.go",
    ],
    importpath = "github.com/apache/beam/sdks/v2/go/pkg/beam",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/beam/core/funcx",
        "//go/pkg/beam/core/graph",
        "//go/pkg/beam/core/graph/coder",
        "//go/pkg/beam/core/graph/window",
        "//go/pkg/beam/core/graph/window/trigger",
        "//go/pkg/beam/core/metrics",
        "//go/pkg/beam/core/runtime",
        "//go/pkg/beam/core/runtime/coderx",
        "//go/pkg/beam/core/runtime/exec",
        "//go/pkg/beam/core/runtime/genx",
        "//go/pkg/beam/core/runtime/graphx",
        "//go/pkg/beam/core/runtime/graphx/schema",
        "//go/pkg/beam/core/runtime/xlangx",
        "//go/pkg/beam/core/sdf",
        "//go/pkg/beam/core/typex",
        "//go/pkg/beam/core/util/jsonx",
        "//go/pkg/beam/core/util/reflectx",
        "//go/pkg/beam/internal/errors",
        "//go/pkg/beam/log",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "beam_test",
    srcs = [
        "coder_test.go",
        "combine_test.go",
        "create_test.go",
        "doc_test.go",
        "encoding_test.go",
        "example_schema_test.go",
        "external_test.go",
        "metrics_test.go",
        "pardo_test.go",
        "partition_test.go",
    ],
    embed = [":beam"],
    deps = [
        "//go/pkg/beam/core/graph",
        "//go/pkg/beam/core/graph/coder",
        "//go/pkg/beam/core/graph/coder/testutil",
        "//go/pkg/beam/core/graph/window",
        "//go/pkg/beam/core/graph/window/trigger",
        "//go/pkg/beam/core/metrics",
        "//go/pkg/beam/core/runtime/graphx",
        "//go/pkg/beam/core/runtime/graphx/schema",
        "//go/pkg/beam/core/typex",
        "//go/pkg/beam/core/util/reflectx",
        "//go/pkg/beam/io/textio",
        "//go/pkg/beam/model/pipeline_v1",
        "//go/pkg/beam/options/jobopts",
        "//go/pkg/beam/runners/direct",
        "//go/pkg/beam/testing/passert",
        "//go/pkg/beam/testing/ptest",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp",
    ],
)
