load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "integration",
    srcs = [
        "expansions.go",
        "flags.go",
        "integration.go",
    ],
    importpath = "github.com/apache/beam/sdks/v2/go/test/integration",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/beam/options/jobopts",
        "//go/pkg/beam/testing/ptest",
        "//go/test/integration/internal/jars",
        "//go/test/integration/internal/ports",
    ],
)

go_test(
    name = "integration_test",
    srcs = ["expansions_test.go"],
    embed = [":integration"],
    deps = [
        "//go/pkg/beam/runners/dataflow",
        "//go/pkg/beam/runners/flink",
        "//go/pkg/beam/runners/samza",
        "//go/pkg/beam/runners/spark",
        "//go/test/integration/internal/jars",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
