load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "load",
    srcs = ["util.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/test/load",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/beam",
        "//go/pkg/beam/core/metrics",
        "//go/pkg/beam/register",
    ],
)
