load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "autocomplete_lib",
    srcs = ["autocomplete.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/examples/complete/autocomplete",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/beam",
        "//go/pkg/beam/io/textio",
        "//go/pkg/beam/log",
        "//go/pkg/beam/transforms/top",
        "//go/pkg/beam/x/beamx",
        "//go/pkg/beam/x/debug",
    ],
)

go_binary(
    name = "autocomplete",
    embed = [":autocomplete_lib"],
    visibility = ["//visibility:public"],
)
