load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "combine_lib",
    srcs = ["combine.go"],
    importpath = "github.com/apache/beam/sdks/v2/go/examples/cookbook/combine",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/beam",
        "//go/pkg/beam/io/bigqueryio",
        "//go/pkg/beam/log",
        "//go/pkg/beam/options/gcpopts",
        "//go/pkg/beam/x/beamx",
    ],
)

go_binary(
    name = "combine",
    embed = [":combine_lib"],
    visibility = ["//visibility:public"],
)
